dataset1235/2025-2/1153765216/users/4261539586/executions/2747719322_48684178.log
== SUBMISSION (2025-08-14 18:56:50)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
formula = total_vendas*30%
print(round(formula, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:57:38)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
lucro = 30%
formula = total_vendas*lucro
print(round(formula, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:55:53)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
lucro = 30%
print(round(lucro, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:56:53)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
formula = total_vendas*30%
print(round(formula, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    formula = total_vendas*30%
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:57:01)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
total_vendas*30%
print(round(formula, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    total_vendas*30%
                    ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    total_vendas*30%
                    ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    total_vendas*30%
                    ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    total_vendas*30%
                    ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    total_vendas*30%
                    ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    total_vendas*30%
                    ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:57:36)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
lucro = 30%
formula = total_vendas*lucro
print(round(formula, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 18:57:35)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
lucro = 30%
formula = total_vendas*lucro
print(round(formula, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 19:51:26)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = float(input("informe o total de vendas: "))

lucro = total_vendas*(30/100)
print(round(lucro, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
informe o total de vendas: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
informe o total de vendas: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
informe o total de vendas: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
informe o total de vendas: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
informe o total de vendas: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
informe o total de vendas: 568.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-14 19:51:36)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = float(input("informe o total de vendas: "))

lucro = total_vendas*(30/100)
print(round(lucro, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
informe o total de vendas: 435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
informe o total de vendas: 210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
informe o total de vendas: 60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
informe o total de vendas: 135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
informe o total de vendas: 165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
informe o total de vendas: 568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-14 18:55:54)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

total_vendas = input("digite o valor: ")
lucro = 30%
print(round(lucro, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 6
    lucro = 30%
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
